--- a/Binarios.ipynb
+++ b/Binarios.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Binarios.ipynb",
+      "name": "Binarios",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6H7vUIEMfw1sbJ/dip8M1",
+      "authorship_tag": "ABX9TyOJFiA4TGiC4dDoOeGblUkx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,23 +27,24 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "PqUc-Bk6Pe_W",
+        "id": "GJkP3j3ra2q3",
         "colab_type": "text"
       },
       "source": [
-        "##Convertir el numero **26)10** a binario **?)2**"
+        "##Convertir un numero entero decimal a binario\n",
+        "Convertir el número 26 a binario"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GhgoGydDNt96",
+        "id": "wW3BxJ0Ta1G9",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "4326fe44-08d9-4852-e0e5-303af6eafd4b"
+        "outputId": "02cf73a9-99c7-4ee8-d80c-f1d9fbfd373d"
       },
       "source": [
         "base=2\n",
@@ -53,7 +54,7 @@
         "print(3//base,3%base)\n",
         "print(1//base,1%base)"
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,36 +72,67 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jHFcApXyQPia",
+        "id": "nURCFJGlbxfk",
         "colab_type": "text"
       },
       "source": [
-        "###Resultado 11010"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ktg0rLqBQbZn",
-        "colab_type": "text"
-      },
-      "source": [
-        "Vamos a usar ahora la funcion **bin** de Python"
+        "Comprobación"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mgj4u_qDPcf5",
+        "id": "SBf5mg0lbz3Q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a226cb7a-6103-405a-8dc7-c9b1fe4db54f"
+      },
+      "source": [
+        "1*base**4 + 1*base**3 + 0*base**2 + 1*base**1 + 0*base**0"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "26"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ISoyMUcrcW42",
+        "colab_type": "text"
+      },
+      "source": [
+        "Usando la biblioteca numpy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EPOxE7YCcazz",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "63702d7c-1c9e-4b8e-ec97-0367dffe5df3"
+        "outputId": "c128cf5b-dd8c-414e-bce5-34c29ab19d5a"
       },
       "source": [
-        "bin(26)"
+        "import numpy as np\n",
+        "np.base_repr(26,base)"
       ],
       "execution_count": 10,
       "outputs": [
@@ -111,7 +143,7 @@
               "type": "string"
             },
             "text/plain": [
-              "'0b11010'"
+              "'11010'"
             ]
           },
           "metadata": {
