--- a/Lagrange.ipynb
+++ b/Lagrange.ipynb
@@ -6,7 +6,7 @@
       "name": "Lagrange.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMoDBpxRmem6C1BRS+8ppiV",
+      "authorship_tag": "ABX9TyNFsxz2tzpAr/qEf3tWHAli",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,14 +46,26 @@
       "metadata": {
         "id": "umT0vvUE2u6g",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "80200611-b208-4f98-f74f-8247165312f4"
       },
       "source": [
         "x=np.array([1,4,8,15,18])\n",
         "y=np.array([1.1,1.5,12.1,15.3,15.9])"
       ],
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -74,25 +86,50 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "PzR4I7sRhpKT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def Lagrange(x,y,xi):\n",
+        "  n=np.size(x)\n",
+        "  p=0\n",
+        "  for i in range(n):\n",
+        "    z=y[i]\n",
+        "    for j in range(n):\n",
+        "      if i!=j:\n",
+        "        z=z*(xi-x[j])/(x[i]-x[j])\n",
+        "    p=p+z\n",
+        "  return p"
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "jLEhy8nP30zX",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 51
         },
-        "outputId": "873e1787-e763-4f56-dd8e-84921ed30d2c"
+        "outputId": "8bd00542-f4f7-44fe-a355-7bdb603b75bd"
       },
       "source": [
         "dia=6\n",
         "profundidad=inter(dia)\n",
+        "print(profundidad)\n",
+        "profundidad=Lagrange(x,y,dia)\n",
         "print(profundidad)"
       ],
-      "execution_count": 6,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "6.714296627742003\n"
+            "6.714296627742003\n",
+            "6.714296627742005\n"
           ],
           "name": "stdout"
         }
