--- a/ExamenIntegrales.ipynb
+++ b/ExamenIntegrales.ipynb
@@ -79,9 +79,9 @@
         "L=\\frac{m}{D\\pi}\\int_{T_0}^T\\frac{Cp}{h\\left(T_S-T\\right)}dT\n",
         "$$ \n",
         "\n",
-        "Donde $h=\\frac{0.023k}{D}\\left(\\frac{4m}{\\pi D\\mu}\\right)^{0.8}\\left(\\frac{\\mu Cp}{k}\\right)^{0.33}$, $m$ es la masa, $k$ es la conductividad termica $i$, $\\mu$ es viscosidad, $Cp$ es la capacidad calor[ifica a presi[on constante, todas del fluido fr[io.\n",
+        "Donde $h=\\frac{0.023k}{D}\\left(\\frac{4m}{\\pi D\\mu}\\right)^{0.8}\\left(\\frac{\\mu Cp}{k}\\right)^{0.33}$, $m$ es la masa, $k$ es la conductividad térmica $i$, $\\mu$ es viscosidad, $Cp$ es la capacidad calorífica a presión constante, todas del fluido frio.\n",
         "\n",
-        "Para un flujo cuyas propiedades est[an dadas por\n",
+        "Para un flujo cuyas propiedades están dadas por\n",
         "\n",
         "$$\n",
         "Cp(T)=0.53+0.0006T-6.25\\times 10^{-6}T^2 \\frac{BTU}{lb}F\n",
@@ -95,7 +95,7 @@
         "k=0.153\\frac{BTU}{hrftF}\n",
         "$$\n",
         "\n",
-        "Cu[al ser[a la longitud necesaria de los tubos para calentar el fluido de $20F$ a $60F$ Use cuadratura de Gauss-Legendre para lacular la integral.\n",
+        "Cu[al será la longitud necesaria de los tubos para calentar el fluido de $20F$ a $60F$ Use cuadratura de Gauss-Legendre para lacular la integral.\n",
         "\n",
         "$m=1500\\frac{lb}{hr}$, $T_S=320F$, $D=0.25ft$\n"
       ]
@@ -128,7 +128,7 @@
       "source": [
         "def f(T): \n",
         "  #defina los valores de las constantes que se requieren\n",
-        "  return #defina aqui la ecuacion en funcion de T"
+        "  return #defina aquí la ecuación en función de T"
       ],
       "execution_count": null,
       "outputs": []
@@ -139,7 +139,7 @@
         "id": "SF1L9WZgT8oh"
       },
       "source": [
-        "2. Grafique la función en los limites de integraci[on"
+        "2. Grafique la función en los limites de integración"
       ]
     },
     {
