--- a/ExamenIntegrales.ipynb
+++ b/ExamenIntegrales.ipynb
@@ -32,7 +32,7 @@
       "source": [
         "#Métodos Numéricos\n",
         "\n",
-        "#Examen - Ecuaciones no lineales\n",
+        "#Examen - Integrales\n",
         "\n",
         "![UNAM](https://drive.google.com/uc?export=view&id=1GATLSo6jWPCg6vd4M3_aK5bbXRm9a_4K)\n",
         "---\n",
@@ -79,7 +79,7 @@
         "L=\\frac{m}{D\\pi}\\int_{T_0}^T\\frac{Cp}{h\\left(T_S-T\\right)}dT\n",
         "$$ \n",
         "\n",
-        "Donde $h=\\frac{0.023k}{D}\\left(\\frac{4m}{\\pi D\\mu}\\right)^{0.8}\\left(\\frac{\\mu Cp}{k}\\right)^{0.33}$, $m$ es la masa, $k$ es la conductividad térmica $i$, $\\mu$ es viscosidad, $Cp$ es la capacidad calorífica a presión constante, todas del fluido frio.\n",
+        "Donde $h=\\frac{0.023k}{D}\\left(\\frac{4m}{\\pi D\\mu}\\right)^{0.8}\\left(\\frac{\\mu Cp}{k}\\right)^{0.33}$, $m$ es la masa, $k$ es la conductividad térmica, $\\mu$ es viscosidad, $Cp$ es la capacidad calorífica a presión constante, todas del fluido frío.\n",
         "\n",
         "Para un flujo cuyas propiedades están dadas por\n",
         "\n",
@@ -95,7 +95,7 @@
         "k=0.153\\frac{BTU}{hrftF}\n",
         "$$\n",
         "\n",
-        "Cu[al será la longitud necesaria de los tubos para calentar el fluido de $20F$ a $60F$ Use cuadratura de Gauss-Legendre para lacular la integral.\n",
+        "Cuál será la longitud necesaria de los tubos para calentar el fluido de $20F$ a $60F$ Use cuadratura de Gauss-Legendre para lacular la integral.\n",
         "\n",
         "$m=1500\\frac{lb}{hr}$, $T_S=320F$, $D=0.25ft$\n"
       ]
