--- a/ExamenEDO2.ipynb
+++ b/ExamenEDO2.ipynb
@@ -57,22 +57,22 @@
         "Cambio de concentración en el tanque $T_1$\n",
         "\n",
         "$$\n",
-        "\\frac{dy_1}{dt}=100\\frac{lt}{min}0.18\\frac{kg}{min}-100\\frac{lt}{min}y_1\\frac{kg}{min}\\\\\n",
+        "\\frac{dy_1}{dt}=100\\times 0.18-100y_1\\frac{1}{1000}\\\\\n",
         "\\frac{dy_1}{dt}=0.018-0.1y_1 \\quad y_1(0)=0.15\n",
         "$$\n",
         "\n",
         "Cambio de concentración en el tanque $T_2$\n",
         "\n",
         "$$\n",
-        "\\frac{dy_2}{dt}=100\\frac{lt}{min}y_1\\frac{kg}{min}-100\\frac{lt}{min}y_2\\frac{kg}{min}\\\\\n",
+        "\\frac{dy_2}{dt}=100y_1\\frac{1}{1000}-100y_2\\frac{1}{1000}\\\\\n",
         "\\frac{dy_2}{dt}=0.1(y_1-y_2) \\quad y_2(0)=0.2\n",
         "$$\n",
         "\n",
         "Cambio de concentración en el tanque $T_3$\n",
         "\n",
         "$$\n",
-        "\\frac{dy_3}{dt}=100\\frac{lt}{min}y_2\\frac{kg}{min}-100\\frac{lt}{min}y_3\\frac{kg}{min}\\\\\n",
-        "\\frac{dy_3}{dt}=0.1(y_2-y_3) \\quad y_1(0)=0.125\n",
+        "\\frac{dy_3}{dt}=100y_2\\frac{1}{1000}-100y_3\\frac{1}{1000}\\\\\n",
+        "\\frac{dy_3}{dt}=0.1(y_2-y_3) \\quad y_3(0)=0.125\n",
         "$$\n",
         "\n",
         "Como podemos observar, la variación de la concentración en el tanque $T_2$ depende de la variación en el tanque $T_1$, a su vez, la concentración del tanque $T_3$ depende de la variación en el tanque $T_2$.\n",
