--- a/ENL_cerrados.ipynb
+++ b/ENL_cerrados.ipynb
@@ -6,7 +6,7 @@
       "name": "ENL_cerrados.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPWyZjRGJhXTH4lZhwZgR7z",
+      "authorship_tag": "ABX9TyNyFwMy4IjmFOysSQEKnvuT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -354,7 +354,7 @@
         "def f(x):\n",
         "  return x**2-2"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -641,6 +641,32 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "srZBYbKfrUVh",
+        "outputId": "63f48c2a-8344-44de-cfe5-e78d4908512f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from scipy import optimize\n",
+        "\n",
+        "r=optimize.bisect(f,1,2)\n",
+        "print('Raiz ',r)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Raiz  1.4142135623715149\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "s7pPQJ2s74Nn"
@@ -781,6 +807,33 @@
             "tags": []
           },
           "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZKxQeyLdszJh",
+        "outputId": "971851b8-93b3-49cb-a3b4-061ff31e63eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from scipy import optimize\n",
+        "import sympy as sp\n",
+        "\n",
+        "r=optimize.newton(f,1,lambda x:2*x)\n",
+        "print(r)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.4142135623730951\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
