--- a/EcuacionesNoLineales.ipynb
+++ b/EcuacionesNoLineales.ipynb
@@ -6,7 +6,7 @@
       "name": "EcuacionesNoLineales.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPrDAMlGQU1QBNM19XIcgeY",
+      "authorship_tag": "ABX9TyMm8KR5A7P3loTq/DeRk8Os",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,17 @@
         "\n",
         "Desarrollo de métodos para resolver ecuaciones no lineales"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a2jcugs-jSie"
+      },
+      "source": [
+        "#import de bibliotecas necesarias\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
