--- a/EcuacionesNoLineales.ipynb
+++ b/EcuacionesNoLineales.ipynb
@@ -6,7 +6,7 @@
       "name": "EcuacionesNoLineales.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOgh2kXknrNOujTCCZrAw/4",
+      "authorship_tag": "ABX9TyPgowb1at5dmY8Nap2H0pgx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1065,11 +1065,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XGHYZydjBzPi",
-        "outputId": "c274c644-857b-4ec1-adeb-bf4e56c14282",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XGHYZydjBzPi",
+        "outputId": "c274c644-857b-4ec1-adeb-bf4e56c14282"
       },
       "source": [
         "F(0.03)"
@@ -1093,12 +1093,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "O29u6HzT-4W3",
-        "outputId": "ac232bd7-2353-4f2a-f3f5-b87384d96139",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        }
+        },
+        "id": "O29u6HzT-4W3",
+        "outputId": "ac232bd7-2353-4f2a-f3f5-b87384d96139"
       },
       "source": [
         "#obtener la derivada\n",
@@ -1182,21 +1182,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8497d063-2c94-4982-8c80-37ec1b233543"
+        "outputId": "9a8395a7-9b46-4e4f-faf1-36998484f09a"
       },
       "source": [
         "#Hacer la llamada a la función\n",
         "from scipy import optimize\n",
         "\n",
-        "r=optimize.newton(F,0.005)\n",
+        "r=optimize.newton(F,0.005,dF)\n",
         "print(r)\n"
       ],
-      "execution_count": 43,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.029099621182750716\n"
+            "0.02909962040151198\n"
           ],
           "name": "stdout"
         }
@@ -1205,19 +1205,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-rZQIKoTEnc9",
-        "outputId": "5e4750ed-1905-499e-cca9-30506a32bbeb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 536
-        }
+        },
+        "id": "-rZQIKoTEnc9",
+        "outputId": "12085c86-5fb7-4ef6-88ab-a05f2d4d8d39"
       },
       "source": [
         "r,t=nr(F,dF,0.005,1e-10)\n",
         "print(r)\n",
         "t"
       ],
-      "execution_count": 46,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -1370,7 +1370,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 50
         }
       ]
     },
