--- a/Interpolacion01.ipynb
+++ b/Interpolacion01.ipynb
@@ -6,7 +6,7 @@
       "name": "Interpolacion01.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPeVymuS0JS8iUwGiDUvO/M",
+      "authorship_tag": "ABX9TyOElXJ7iBb25qIlj+tFfucr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,9 +44,9 @@
         "\n",
         "$$\n",
         "\\begin{array}{l|c|c|c|c|c|c}\n",
-        "\\text{Densidad}&4.1& 12.2& 20.3& 28.2& 38.1& 45.2\\\\\n",
+        "\\text{Concentración}&4.1& 12.2& 20.3& 28.2& 38.1& 45.2\\\\\n",
         "\\hline\n",
-        "\\text{Concentración}&1.0276& 1.1013& 1.1801& 1.2652& 1.3480& 1.4120\n",
+        "\\text{Densidad}&1.0276& 1.1013& 1.1801& 1.2652& 1.3480& 1.4120\n",
         "\\end{array}\n",
         "$$\n",
         "\n",
@@ -178,7 +178,7 @@
         "from scipy.interpolate import lagrange\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
         "x=np.array([1,4,8,13,18])\n",
         "y=np.array([1.1,1.5,12.8,15.3,15.5])"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -208,7 +208,7 @@
         "yi=p(xi)\n",
         "print(yi)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +232,7 @@
         "from numpy.polynomial.polynomial import Polynomial\n",
         "Polynomial(p).coef"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -262,16 +262,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "SNiqwX5kVoNT",
-        "outputId": "8e2f7b8b-88ef-4cf5-a765-3e48985359b3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8e2f7b8b-88ef-4cf5-a765-3e48985359b3"
       },
       "source": [
         "f=lambda x:4.04341737e-03*x**4-1.58700280e-01*x**3+1.94220028e+00*x**2 -6.58865266e+00*x+5.90110924e+00\n",
         "f(3)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -359,7 +359,7 @@
         "from scipy import interpolate\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -371,7 +371,7 @@
         "x=np.linspace(-1,1,10)\n",
         "y=1/(1+25*x**2)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -384,7 +384,7 @@
         "xs=np.linspace(x.min(),x.max())\n",
         "ys=s(xs)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -397,7 +397,7 @@
         "xs=np.linspace(x.min(),x.max())\n",
         "yv=v(xs)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -418,7 +418,7 @@
         "plt.title('Problema de Runge')\n",
         "plt.show()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
