--- a/EcuacionesNoLineales.ipynb
+++ b/EcuacionesNoLineales.ipynb
@@ -6,7 +6,7 @@
       "name": "EcuacionesNoLineales.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP1a/vIfNWqXNoo8P+OmXes",
+      "authorship_tag": "ABX9TyO+KERssXkjFD1z/uH/0OUj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,12 +83,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Segu6ebE3rvJ",
-        "outputId": "adcb0641-ee3e-42ca-aed3-fcdf25bee0fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
-        }
+        },
+        "id": "Segu6ebE3rvJ",
+        "outputId": "adcb0641-ee3e-42ca-aed3-fcdf25bee0fa"
       },
       "source": [
         "x=np.linspace(-2,2)\n",
@@ -178,11 +178,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0WuxbAlT3Jn0",
-        "outputId": "fa156f77-a72a-4a34-9c98-38907e05f20a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0WuxbAlT3Jn0",
+        "outputId": "fa156f77-a72a-4a34-9c98-38907e05f20a"
       },
       "source": [
         "from scipy.optimize import bisect\n",
@@ -259,11 +259,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EZdyOb4z5TjC",
-        "outputId": "dc266849-f81d-4f1d-cb4d-3aad1bcdf46f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EZdyOb4z5TjC",
+        "outputId": "dc266849-f81d-4f1d-cb4d-3aad1bcdf46f"
       },
       "source": [
         "help(reglafalsa)"
@@ -334,7 +334,7 @@
         "#Graficar la función para identificar el comportamiento y ubicar los puntos iniciales\n",
         "x=np.linspace(0,20)\n",
         "\n",
-        "traza1=go.Scatter(x=x,y=f(x),mode='lines+markers',name='$x^2-2$',\n",
+        "traza1=go.Scatter(x=,y=,mode='lines+markers',name='$x^2-2$',\n",
         "                  line=dict(color='salmon'))\n",
         "\n",
         "data=[traza1]\n",
@@ -419,7 +419,7 @@
       },
       "source": [
         "#Hacer la llamada a la función\n",
-        "h,t=reglafalsa(f,5,7.5)\n",
+        "h,t=reglafalsa()\n",
         "print(h)\n",
         "t"
       ],
@@ -610,7 +610,7 @@
         "#Graficar la función para identificar el comportamiento y ubicar los puntos iniciales\n",
         "x=np.linspace(0.001,0.2)\n",
         "\n",
-        "traza1=go.Scatter(x=x,y=F(x),mode='lines+markers',name='$x^2-2$',\n",
+        "traza1=go.Scatter(x=,y=,mode='lines+markers',name='$x^2-2$',\n",
         "                  line=dict(color='salmon'))\n",
         "\n",
         "data=[traza1]\n",
@@ -723,10 +723,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "FDqc5FDtvXQD",
-        "outputId": "4f5d2423-a0a3-4068-ff47-c684bbac1cd0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4f5d2423-a0a3-4068-ff47-c684bbac1cd0"
       },
       "source": [
         "#Hacer la llamada a la función\n",
@@ -760,33 +760,6 @@
       },
       "source": [
         "#Definición de la función para el método de Muller\n",
-        "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "PH94lCsUvvlE"
-      },
-      "source": [
-        "**Problema**: Calcular el volumen de $2 moles$ de $CO_2$ a una presión de $10 atm$ y $300K$, usando la ecuación de Van der Waals\n",
-        "\n",
-        "$$\n",
-        "\\left(P+\\frac{an^2}{V^2}\\right) (V-nb) = nRT\n",
-        "$$\n",
-        "\n",
-        "Donde $a = 3.592$, $b = 0.04267$, $n = 2$, $R = 0.082$, $T = 300$ y $P = 10$."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "tdVwvSt09dWs"
-      },
-      "source": [
-        "#definir la función a resolver\n",
         "def muller(f,x0,x1,x2,tol=1e-5):\n",
         "  tabla=pd.DataFrame(columns=['x0','x1','x2','x3','f(x0)','f(x1)','f(x2)','f(x3)'])\n",
         "  x3=x0\n",
@@ -809,10 +782,25 @@
         "    x0=x1\n",
         "    x1=x2\n",
         "    x2=x3\n",
-        "  return x3,tabla"
+        "  return x3,tabla\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PH94lCsUvvlE"
+      },
+      "source": [
+        "**Problema**: Calcular el volumen de $2 moles$ de $CO_2$ a una presión de $10 atm$ y $300K$, usando la ecuación de Van der Waals\n",
+        "\n",
+        "$$\n",
+        "\\left(P+\\frac{an^2}{V^2}\\right) (V-nb) = nRT\n",
+        "$$\n",
+        "\n",
+        "Donde $a = 3.592$, $b = 0.04267$, $n = 2$, $R = 0.082$, $T = 300$ y $P = 10$."
+      ]
     },
     {
       "cell_type": "code",
@@ -828,24 +816,24 @@
         "P =10\n",
         "f=lambda v: (P+n**2*a/v**2)*(v-n*b)-n*R*T"
       ],
-      "execution_count": 29,
+      "execution_count": 42,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "yzYqYU2dxL10",
-        "outputId": "88c5c20d-9dd7-422e-90ca-fb57cc0a2bd9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
-        }
+        },
+        "outputId": "88c5c20d-9dd7-422e-90ca-fb57cc0a2bd9"
       },
       "source": [
         "#Graficar la función para identificar el comportamiento y ubicar los puntos iniciales\n",
         "x=np.linspace(.2,6)\n",
         "\n",
-        "traza1=go.Scatter(x=x,y=f(x),mode='lines+markers',name='',\n",
+        "traza1=go.Scatter(x=,y=,mode='lines+markers',name='',\n",
         "                  line=dict(color='salmon'))\n",
         "\n",
         "data=[traza1]\n",
@@ -922,19 +910,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "EkknozVyxOtd",
-        "outputId": "074fb08a-64c1-451f-8e04-91768b687607",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
-        }
+        },
+        "outputId": "fcc7585b-7806-4b5d-8387-8b0cf23f4274"
       },
       "source": [
         "#Hacer la llamada a la función\n",
-        "r,t=muller(f,1,2,3)\n",
+        "r,t=muller()\n",
         "print(r)\n",
         "t"
       ],
-      "execution_count": 35,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -1059,7 +1047,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 43
         }
       ]
     },
@@ -1130,11 +1118,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "JsUGRbaOx7Eb",
-        "outputId": "ec69f55e-e73b-4a8b-cdc2-bdb97cfea474",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
-        }
+        },
+        "outputId": "ec69f55e-e73b-4a8b-cdc2-bdb97cfea474"
       },
       "source": [
         "#Graficar la función para identificar el comportamiento y ubicar los puntos iniciales\n",
@@ -1217,15 +1205,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "r4AHgWY7x-SM",
-        "outputId": "4a8d6d32-8728-4317-98be-dee6f712631e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        }
+        },
+        "outputId": "4a8d6d32-8728-4317-98be-dee6f712631e"
       },
       "source": [
         "#Hacer la llamada a la función\n",
-        "xr,tabla=puntofijo(4,g)\n",
+        "xr,tabla=puntofijo()\n",
         "print(xr)\n",
         "tabla"
       ],
