--- a/EcuacionesNoLineales.ipynb
+++ b/EcuacionesNoLineales.ipynb
@@ -6,7 +6,7 @@
       "name": "EcuacionesNoLineales.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOtf/+PRDrv6XYSXkFHlp4P",
+      "authorship_tag": "ABX9TyOH8l29433Q0jHzp37I6WiX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1313,6 +1313,249 @@
           },
           "metadata": {},
           "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rXjdoAlx7LEe"
+      },
+      "source": [
+        "##Metodos de anderson, broyden1, broyden2, diagbroyden y newton_krylov"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nsRO3FB93BlA"
+      },
+      "source": [
+        "from scipy.optimize import anderson,broyden1,broyden2,diagbroyden,newton_krylov"
+      ],
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QyifXFhA4SFG"
+      },
+      "source": [
+        "f=lambda x:x**2-2"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Er7J9xw44V3B",
+        "outputId": "d2098673-2386-490a-ff5f-a83863c9d953",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "r=anderson(f,1)\n",
+        "print(r)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.4142144316493963\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u4mUG7ek4eis",
+        "outputId": "51debb29-8934-4f2e-fa32-138f50c66147",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "r=broyden1(f,1)\n",
+        "print(r)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.4142124241008873\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YFn5VQBA5xNC",
+        "outputId": "29940ce8-d8ab-440e-ec2a-4b63084f3ceb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "r=broyden2(f,1)\n",
+        "print(r)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.4142124241008873\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WZiyPBWt6JVN",
+        "outputId": "b12f88b6-87c7-43c5-8454-feea91a97547",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "r=diagbroyden(f,1)\n",
+        "print(r)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.4142124241008873\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_Iu9YJIO519C",
+        "outputId": "363435a7-9588-462f-8fce-1550544a2a70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "r=newton_krylov(f,1)\n",
+        "print(r)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.4142156862798667\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bMXlTyvn7ERR"
+      },
+      "source": [
+        "##Raices complejas"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ibfT24Oh6afq"
+      },
+      "source": [
+        "f=lambda x:x**2+4"
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AZitczAW6ZtT",
+        "outputId": "76231973-d132-4882-e801-de593fc82e31",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "r=anderson(f,1j)\n",
+        "print(r)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4.777800844585532e-08+1.9999999574699123j)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_OE5Td9_6uWZ",
+        "outputId": "81c21607-5ff1-4d95-efda-f3d36cdbfd5f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "r=broyden1(f,1j)\n",
+        "print(r)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1.2954015526017915e-09+2.0000000004298144j)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3LD1d5Po6xlv",
+        "outputId": "5aa38adb-cff9-445e-d784-3ddfc253468f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "r=broyden2(f,1j)\n",
+        "print(r)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1.2954015526034856e-09+2.0000000004298144j)\n"
+          ]
         }
       ]
     }
