--- a/EcuacionesNoLineales.ipynb
+++ b/EcuacionesNoLineales.ipynb
@@ -6,7 +6,7 @@
       "name": "EcuacionesNoLineales.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOH8l29433Q0jHzp37I6WiX",
+      "authorship_tag": "ABX9TyMaYdyhp40LsRE2EiUEACSE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1350,11 +1350,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Er7J9xw44V3B",
-        "outputId": "d2098673-2386-490a-ff5f-a83863c9d953",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Er7J9xw44V3B",
+        "outputId": "d2098673-2386-490a-ff5f-a83863c9d953"
       },
       "source": [
         "r=anderson(f,1)\n",
@@ -1374,11 +1374,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u4mUG7ek4eis",
-        "outputId": "51debb29-8934-4f2e-fa32-138f50c66147",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "u4mUG7ek4eis",
+        "outputId": "51debb29-8934-4f2e-fa32-138f50c66147"
       },
       "source": [
         "r=broyden1(f,1)\n",
@@ -1398,11 +1398,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YFn5VQBA5xNC",
-        "outputId": "29940ce8-d8ab-440e-ec2a-4b63084f3ceb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YFn5VQBA5xNC",
+        "outputId": "29940ce8-d8ab-440e-ec2a-4b63084f3ceb"
       },
       "source": [
         "r=broyden2(f,1)\n",
@@ -1422,11 +1422,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WZiyPBWt6JVN",
-        "outputId": "b12f88b6-87c7-43c5-8454-feea91a97547",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WZiyPBWt6JVN",
+        "outputId": "b12f88b6-87c7-43c5-8454-feea91a97547"
       },
       "source": [
         "r=diagbroyden(f,1)\n",
@@ -1446,11 +1446,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_Iu9YJIO519C",
-        "outputId": "363435a7-9588-462f-8fce-1550544a2a70",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_Iu9YJIO519C",
+        "outputId": "363435a7-9588-462f-8fce-1550544a2a70"
       },
       "source": [
         "r=newton_krylov(f,1)\n",
@@ -1490,11 +1490,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AZitczAW6ZtT",
-        "outputId": "76231973-d132-4882-e801-de593fc82e31",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AZitczAW6ZtT",
+        "outputId": "76231973-d132-4882-e801-de593fc82e31"
       },
       "source": [
         "r=anderson(f,1j)\n",
@@ -1514,11 +1514,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_OE5Td9_6uWZ",
-        "outputId": "81c21607-5ff1-4d95-efda-f3d36cdbfd5f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_OE5Td9_6uWZ",
+        "outputId": "81c21607-5ff1-4d95-efda-f3d36cdbfd5f"
       },
       "source": [
         "r=broyden1(f,1j)\n",
@@ -1538,11 +1538,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3LD1d5Po6xlv",
-        "outputId": "5aa38adb-cff9-445e-d784-3ddfc253468f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3LD1d5Po6xlv",
+        "outputId": "5aa38adb-cff9-445e-d784-3ddfc253468f"
       },
       "source": [
         "r=broyden2(f,1j)\n",
@@ -1555,6 +1555,34 @@
           "name": "stdout",
           "text": [
             "(1.2954015526034856e-09+2.0000000004298144j)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-KyNA84s7fft",
+        "outputId": "b4cce7c7-b148-4e42-e42e-b1615113c7c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from scipy.optimize import newton\n",
+        "\n",
+        "df=lambda x:2*x\n",
+        "\n",
+        "r=newton(f,1j,df)\n",
+        "print(r)"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2j\n"
           ]
         }
       ]
