--- a/integrales2.ipynb
+++ b/integrales2.ipynb
@@ -6,7 +6,7 @@
       "name": "integrales2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMyoWGvxLM8a5KFXEo8KF4/",
+      "authorship_tag": "ABX9TyOf9OdbB344UH4sHWRlCMx4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,26 +34,37 @@
         "import numpy as np\n",
         "\n",
         "def integrales(f,a,b,n,metodo='trap'):\n",
+        "  '''\n",
+        "  f es la funcion a integrar\n",
+        "  a,b son los limites de integracion\n",
+        "  n es el numero de intervalos\n",
+        "  metodo es rect, trap, s13 s38\n",
+        "  '''\n",
+        "  #se valida que los intervalos sean positivos\n",
         "  if n<=0:\n",
         "    raise ValueError(f'n={n} no es valido')\n",
+        "  #se valida que los intervalos sean pares\n",
         "  if metodo=='s13' and n%2>0:\n",
         "    raise ValueError(f'n={n} no es par')\n",
+        "  #se valida que los intervalos sea multiplo de 3\n",
         "  if metodo=='s38' and n%3>0:\n",
         "    raise ValueError(f'n={n} no es multiplo de 3')\n",
         "\n",
-        "  h=(b-a)/n\n",
-        "  x=np.linspace(a,b,n+1)\n",
-        "  fx=f(x)\n",
+        "  h=(b-a)/n #se calcula el tamano del intervalo\n",
+        "  x=np.linspace(a,b,n+1) #se crean los puntos intermedios\n",
+        "  fx=f(x) #se calcula la funcion\n",
         "  if metodo=='trap':\n",
         "    inte=h/2*(fx[0]+2*sum(fx[1:n])+fx[n])\n",
         "  elif metodo=='s13':\n",
         "    inte=h/3*(fx[0]+4*sum(fx[1:n:2])+2*sum(fx[2:n-1:2])+fx[n])\n",
         "  elif metodo=='s38':\n",
         "    inte=3*h/8*(fx[0]+3*sum(fx[1:n-1:3])+3*sum(fx[2:n:3])+2*sum(fx[3:n-2:3])+fx[n])\n",
+        "  elif metodo=='rect':\n",
+        "    inte=h*sum(fx[:n])\n",
         "\n",
         "  return inte"
       ],
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -64,17 +75,17 @@
       "source": [
         "f=lambda x:(9+4*np.cos(0.4*x)**2)*(5*np.exp(-0.5*x)+2*np.exp(0.15*x))"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "mecNUErXalIC",
-        "outputId": "6563c40c-aa4d-485b-b4fa-b558b1631ea5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d9eeca1d-9c37-4dc6-806c-f5b203364f6c"
       },
       "source": [
         "a=2\n",
@@ -83,7 +94,7 @@
         "i=integrales(f,a,b,n,'s13')\n",
         "i"
       ],
-      "execution_count": 10,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,7 +104,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 15
         }
       ]
     },
@@ -124,7 +135,7 @@
         "import numpy as np\n",
         "from scipy.integrate import trapz,simps"
       ],
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -136,6 +147,22 @@
         "x=np.array([1,2,5,6,7,9])\n",
         "y=np.array([10,4,11,12,15,12])"
       ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s_vd2_o-92Qf"
+      },
+      "source": [
+        "n=12\n",
+        "a=2\n",
+        "b=8\n",
+        "f=lambda x:(9+4*np.cos(0.4*x)**2)*(5*np.exp(-0.5*x)+2*np.exp(0.15*x))\n",
+        "x=np.linspace(a,b,n+1)\n",
+        "y=f(x)"
+      ],
       "execution_count": 12,
       "outputs": []
     },
@@ -143,10 +170,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "9TkHIaH22BJU",
-        "outputId": "f3bafee5-e299-49eb-af09-4768dadbc607",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ddac5062-8867-4b96-e0de-8e10c01f2476"
       },
       "source": [
         "trapecios=trapz(y,x)\n",
@@ -154,13 +181,13 @@
         "\n",
         "print(trapecios,simpson)"
       ],
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "81.5 78.375\n"
+            "322.8480912729657 322.34748952044373\n"
           ]
         }
       ]
@@ -169,10 +196,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "R1piisSXdG-E",
-        "outputId": "1437c61c-9764-4ef0-a190-281c76bd0305",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a3955147-009e-4bce-afe1-ce89a2b7ebdb"
       },
       "source": [
         "from scipy.integrate import quad\n",
@@ -180,7 +207,7 @@
         "f=lambda x:np.exp(x)*np.sin(x)/(1+x**2)\n",
         "quad(f,0,3)"
       ],
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,7 +217,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 16
         }
       ]
     },
@@ -215,7 +242,7 @@
       "source": [
         "from scipy.integrate import quad"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -227,7 +254,7 @@
         "def f(x):\n",
         "  return np.exp(-x)/np.sqrt(x)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -237,13 +264,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HRglS6xB5vFk",
-        "outputId": "acdf826e-787b-4ff2-fd73-bb7a6e67ca00"
+        "outputId": "84aa9feb-2383-49f7-ab25-e06fec7e4699"
       },
       "source": [
         "integral=quad(f,0,np.Infinity)\n",
         "integral"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,10 +279,8 @@
               "(1.7724538509051053, 9.585621185692617e-11)"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
+          "metadata": {},
+          "execution_count": 19
         }
       ]
     },
@@ -281,7 +306,7 @@
         "def f(x):\n",
         "  return 1/(1+x**2)"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -291,13 +316,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iGooYJNH8J0w",
-        "outputId": "e4960c28-51ee-4dbb-ce66-3aaf6446237b"
+        "outputId": "6d987a33-c4b2-4d33-b167-9ffb2c1fefd6"
       },
       "source": [
         "integral=quad(f,-np.Infinity,np.Infinity)\n",
         "integral"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,10 +331,8 @@
               "(3.141592653589793, 5.155583041103855e-10)"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     },
@@ -335,7 +358,7 @@
         "def f(x):\n",
         "  return 1/np.sqrt(x)"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -345,13 +368,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hzPIPRnO-Rvi",
-        "outputId": "6b50c87b-1dd2-493c-9e60-3fd063e19fe1"
+        "outputId": "3a630bff-154f-4e77-a20d-3380e61c197d"
       },
       "source": [
         "integral=quad(f,0,1)\n",
         "integral"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,10 +383,8 @@
               "(1.9999999999999984, 5.773159728050814e-15)"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 11
+          "metadata": {},
+          "execution_count": 23
         }
       ]
     },
@@ -390,7 +411,7 @@
         "def f(y,x):\n",
         "  return np.sin(np.sqrt(x**2+y**2))"
       ],
-      "execution_count": 4,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -401,17 +422,17 @@
       "source": [
         "from scipy.integrate import dblquad"
       ],
-      "execution_count": 2,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "fqu7KpJMcGwi",
-        "outputId": "3161ce7d-579d-426c-9c56-130c526601e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ca7e3144-1804-491b-8d29-3238a0eff999"
       },
       "source": [
         "x1=-5\n",
@@ -421,7 +442,7 @@
         "integral=dblquad(f,x1,x2,lambda y:y1,lambda y:y2)\n",
         "integral"
       ],
-      "execution_count": 5,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +452,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 26
         }
       ]
     },
@@ -457,17 +478,17 @@
         "def f(x,y,z):\n",
         "  return x**2*np.exp(-x**2)*np.exp(-0.5*y*z/x)"
       ],
-      "execution_count": 6,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "LVw4csuqcbDq",
-        "outputId": "fd211a8b-cf18-42fc-bab7-3d739c4ed704",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "74d07552-84d9-46a7-bfab-bbb31f28e69f"
       },
       "source": [
         "from scipy.integrate import tplquad\n",
@@ -481,7 +502,7 @@
         "integral=tplquad(f,x1,x2,y1,y2,z1,z2)\n",
         "integral"
       ],
-      "execution_count": 7,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,7 +512,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 28
         }
       ]
     }
